JumpScript/tests/baselines/reference/moduleAsBaseType.errors.txt
tests/cases/compiler/moduleAsBaseType.jump(2,17): error TS2708: Cannot use namespace 'M' as a value.
tests/cases/compiler/moduleAsBaseType.jump(3,21): error TS2709: Cannot use namespace 'M' as a type.
tests/cases/compiler/moduleAsBaseType.jump(4,21): error TS2709: Cannot use namespace 'M' as a type.


==== tests/cases/compiler/moduleAsBaseType.jump (3 errors) ====
    module M {}
    class C extends M {}
                    ~
!!! error TS2708: Cannot use namespace 'M' as a value.
    interface I extends M { }
                        ~
!!! error TS2709: Cannot use namespace 'M' as a type.
    class C2 implements M { }
                        ~
!!! error TS2709: Cannot use namespace 'M' as a type.